# mb-rtu-master

./: .gitignore  BUILD_GUIDE.md  BUILD_QUICK_REFERENCE.md  README.md  WORKFLOW_GUIDE.md  build.py  modbus_simulator_gui.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml
