[project]
name = "modbus-simulator"
version = "0.1.0"
description = "Modbus RTU Simulator GUI with byte array display and raw command support"
authors = [
    {name = "User", email = "user@example.com"}
]
dependencies = [
    "pymodbus>=3.0.0",
    "pyserial>=3.5",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pyinstaller>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstaller>=6.15.0",
]
